--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,5 +4,8 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
+anyhow = "1.0.98"
 crossterm = "0.29.0"
+infer = "0.19.0"
+mime_guess = "2.0.5"
 ratatui = "0.29.0"
