--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,5 +7,7 @@ edition = "2024"
 anyhow = "1.0.98"
 crossterm = "0.29.0"
 infer = "0.19.0"
+lofty = "0.22.4"
 mime_guess = "2.0.5"
 ratatui = "0.29.0"
+rodio = "0.20.1"
