--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,7 @@ edition = "2024"
 [dependencies]
 anyhow = "1.0.98"
 crossterm = "0.29.0"
+image = "0.25.6"
 infer = "0.19.0"
 lofty = "0.22.4"
 mime_guess = "2.0.5"
